rholang/crates/tree_sitter_rholang/test/corpus/junctions.txt
=======
Junctions
=======

{ 1 /\ (1,"2")}
{ 1 \/ Nil}


---

(source_file
  (block
    body: (conjunction
      left: (long_literal)
      right: (collection
        (tuple
          (long_literal)
          (string_literal)))))
  (block
    body: (disjunction
      left: (long_literal)
      right: (nil))))
