rholang/crates/tree_sitter_rholang/test/corpus/pattern_var_ref.txt
=======
SendData
=======

new x in {
           for(@y <- x) {
             match y {
              {@=*x!(_)} => Nil
             }
           }
         }
---

(source_file
  (new
    decls: (decls
      (name_decl
        (var)))
    proc: (block
      body: (input
        formals: (receipts
          (receipt
            (linear_bind
              names: (names
                (quote
                  (var)))
              input: (simple_source
                (var)))))
        proc: (block
          body: (match
            expression: (var)
            cases: (cases
              (case
                pattern: (block
                  body: (send
                    name: (quote
                      (var_ref
                        kind: (var_ref_kind)
                        var: (var)))
                    send_type: (send_single)
                    inputs: (inputs
                      (wildcard))))
                proc: (nil)))))))))
