rholang/crates/tree_sitter_rholang/tests/corpus/names.txt
=====
Names
=====

@{10 + 2}
@{5 + 7}

@{ P | Q }
@{ Q | P }
@{ Q | P | Nil }

---

(source_file
  (quote
    (block
      body: (add
        left: (long_literal)
        right: (long_literal))))
  (quote
    (block
      body: (add
        left: (long_literal)
        right: (long_literal))))
  (quote
    (block
      body: (par
        left: (var)
        right: (var))))
  (quote
    (block
      body: (par
        left: (var)
        right: (var))))
  (quote
    (block
      body: (par
        left: (par
          left: (var)
          right: (var))
        right: (nil)))))
