rholang/crates/tree_sitter_rholang/tests/corpus/replicated_send.txt
================
Replicated send
================

new HelloWorld, stdout(`rho:io:stdout`), stderr(`rho:io:stderr`) in {
  HelloWorld!!("Hello, world!") |
  for (@text <- HelloWorld) {
    stdout!(text)
  } |
  for (@text <- HelloWorld) {
    stderr!(text)
  }
}

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      body: (par
        left: (par
          left: (send
            name: (var)
            send_type: (send_multiple)
            inputs: (inputs
              (string_literal)))
          right: (input
            formals: (receipts
              (receipt
                (linear_bind
                  names: (names
                    (quote
                      (var)))
                  input: (simple_source
                    (var)))))
            proc: (block
              body: (send
                name: (var)
                send_type: (send_single)
                inputs: (inputs
                  (var))))))
        right: (input
          formals: (receipts
            (receipt
              (linear_bind
                names: (names
                  (quote
                    (var)))
                input: (simple_source
                  (var)))))
          proc: (block
            body: (send
              name: (var)
              send_type: (send_single)
              inputs: (inputs
                (var)))))))))
